chore: updated code

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </div>
 
 
-        <!-- chris bryan quote -->
+        <!-- Professor quote -->
         <div class="comic-quote">
             <div class="comic-bubble" style="top: 20%; left: 20%;">
                 I'm a little disappointed it didn't let me discuss all of my coffee paraphernalia, which includes a pour
