chore: removed &nbsp

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="step" data-step="2">
             <div class="visualization-container" id="pie-chart">
                 <h2 style="font-size: 28px; font-weight: bold; color: #331; margin: 10px 0 0 0;">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Top 5 Taiwanese Coffee Companies
+                    Top 5 Taiwanese Coffee Companies
                 </h2>
             </div>
         </div>
